[tool.poetry]
name = "Volleyball_Bot"
version = "0.1.0"
description = "My telegram bot for a volleyball group"
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
environs = "^10.3.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
setuptools = "^72.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
